--- a/backend/SecretSanta.Backend/SecretSanta.Backend.DataAccess/SecretSanta.Backend.DataAccess.csproj
+++ b/backend/SecretSanta.Backend/SecretSanta.Backend.DataAccess/SecretSanta.Backend.DataAccess.csproj
@@ -2,14 +2,18 @@
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
-		<LangVersion>10.0</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>disable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\SecretSanta.Backend.DomainModel\SecretSanta.Backend.DomainModel.csproj" />
     </ItemGroup>
 
 </Project>
