--- a/backend/SecretSanta.Backend/SecretSanta.Backend.Web/SecretSanta.Backend.Web.csproj
+++ b/backend/SecretSanta.Backend/SecretSanta.Backend.Web/SecretSanta.Backend.Web.csproj
@@ -2,13 +2,22 @@
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
-        <Nullable>enable</Nullable>
+        <Nullable>disable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\SecretSanta.Backend.Configurations\SecretSanta.Backend.Configurations.csproj" />
+      <ProjectReference Include="..\SecretSanta.Backend.DataAccess\SecretSanta.Backend.DataAccess.csproj" />
     </ItemGroup>
 
 </Project>
