--- a/backend/SecretSanta.Backend/SecretSanta.Backend.Web/appsettings.json
+++ b/backend/SecretSanta.Backend/SecretSanta.Backend.Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SecretSanta;Trusted_Connection=True"
+  },
   "AllowedHosts": "*"
 }
