Added basic account service and controller

--- a/backend/SecretSanta.Backend/SecretSanta.Backend.Foundation/SecretSanta.Backend.Foundation.csproj
+++ b/backend/SecretSanta.Backend/SecretSanta.Backend.Foundation/SecretSanta.Backend.Foundation.csproj
@@ -8,8 +8,20 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="10.1.1" />
+      <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="6.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\SecretSanta.Backend.Common\SecretSanta.Backend.Common.csproj" />
+      <ProjectReference Include="..\SecretSanta.Backend.Configurations\SecretSanta.Backend.Configurations.csproj" />
+      <ProjectReference Include="..\SecretSanta.Backend.DataAccess\SecretSanta.Backend.DataAccess.csproj" />
+      <ProjectReference Include="..\SecretSanta.Backend.DomainModel\SecretSanta.Backend.DomainModel.csproj" />
     </ItemGroup>
 
 </Project>
