--- a/backend/SecretSanta.Backend/SecretSanta.Backend.DomainModel/SecretSanta.Backend.DomainModel.csproj
+++ b/backend/SecretSanta.Backend/SecretSanta.Backend.DomainModel/SecretSanta.Backend.DomainModel.csproj
@@ -7,4 +7,8 @@
         <Nullable>disable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.0" />
+    </ItemGroup>
+
 </Project>
