--- a/backend/SecretSanta.Backend/SecretSanta.Backend.Web/SecretSanta.Backend.Web.csproj
+++ b/backend/SecretSanta.Backend/SecretSanta.Backend.Web/SecretSanta.Backend.Web.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -18,6 +19,7 @@
     <ItemGroup>
       <ProjectReference Include="..\SecretSanta.Backend.Configurations\SecretSanta.Backend.Configurations.csproj" />
       <ProjectReference Include="..\SecretSanta.Backend.DataAccess\SecretSanta.Backend.DataAccess.csproj" />
+      <ProjectReference Include="..\SecretSanta.Backend.Foundation\SecretSanta.Backend.Foundation.csproj" />
     </ItemGroup>
 
 </Project>
