Moved from default services to CQRS

--- a/backend/SecretSanta.Backend/SecretSanta.Backend.Foundation/SecretSanta.Backend.Foundation.csproj
+++ b/backend/SecretSanta.Backend/SecretSanta.Backend.Foundation/SecretSanta.Backend.Foundation.csproj
@@ -9,6 +9,8 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="10.1.1" />
+      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+      <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
       <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.0" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.0" />
@@ -18,8 +20,6 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\SecretSanta.Backend.Common\SecretSanta.Backend.Common.csproj" />
-      <ProjectReference Include="..\SecretSanta.Backend.Configurations\SecretSanta.Backend.Configurations.csproj" />
       <ProjectReference Include="..\SecretSanta.Backend.DataAccess\SecretSanta.Backend.DataAccess.csproj" />
       <ProjectReference Include="..\SecretSanta.Backend.DomainModel\SecretSanta.Backend.DomainModel.csproj" />
     </ItemGroup>
