--- a/backend/SecretSanta.Backend/SecretSanta.Backend.Web/appsettings.json
+++ b/backend/SecretSanta.Backend/SecretSanta.Backend.Web/appsettings.json
@@ -8,5 +8,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SecretSanta;Trusted_Connection=True"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Cors": {
+    "Origins" : ["http://localhost:3000"]
+  }
 }
