Additional project setup: eslint, prettier, etc.

--- a/secret-santa.frontend/.eslintrc.json
+++ b/secret-santa.frontend/.eslintrc.json
@@ -6,6 +6,6 @@
     ],
     "rules": {
         "prefer-const": "error",
-        "no-unused-vars": "error"
+        "no-unused-vars": "off"
     }
 }
