--- a/secret-santa.frontend/.prettierrc.json
+++ b/secret-santa.frontend/.prettierrc.json
@@ -2,7 +2,7 @@
     "$schema": "http://json.schemastore.org/prettierrc",
     "trailingComma": "es5",
     "tabWidth": 4,
-    "semi": false,
     "singleQuote": true,
-    "jsxSingleQuote": true
+    "jsxSingleQuote": true,
+    "endOfLine": "crlf"
 }
