--- a/secret-santa.frontend/.eslintrc.json
+++ b/secret-santa.frontend/.eslintrc.json
@@ -6,6 +6,6 @@
     ],
     "rules": {
         "prefer-const": "error",
-        "no-unused-vars": "off"
+        "@typescript-eslint/no-unused-vars": "off"
     }
 }
