--- a/secret-santa.frontend/tsconfig.json
+++ b/secret-santa.frontend/tsconfig.json
@@ -16,8 +16,10 @@
         "incremental": true,
         "noImplicitAny": true,
         "noUnusedParameters": true,
-        "noUnusedLocals": true
+        "noUnusedLocals": true,
+        "baseUrl": "."
     },
     "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules"],
+
 }
